:whale: Configuring docker to support Java 15 for build and run