@@ -1,7 +1,7 @@
 # Stage that builds the application, a prerequisite for the running stage
-FROM maven:3-jdk-11 as build
+FROM openjdk:15-buster as build
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
-RUN apt-get update -qq && apt-get install -qq --no-install-recommends nodejs
+RUN apt-get update -qq && apt-get install -qq --no-install-recommends nodejs maven
 
 # Stop running as root at this point
 RUN useradd -m myuser
@@ -23,9 +23,9 @@ COPY --chown=myuser:myuser package.json pnpm-lock.yaml webpack.config.js ./
 RUN mvn clean package -DskipTests -Pproduction
 
 # Running stage: the part that is used for running the application
-FROM openjdk:11
+FROM openjdk:15-buster
 COPY --from=build /usr/src/app/target/*.jar /usr/app/app.jar
 RUN useradd -m myuser
 USER myuser
 EXPOSE 8080
-CMD java -jar /usr/app/app.jar
+CMD java --enable-preview -jar /usr/app/app.jar
